Add MCP server support with tool management and integration

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ set(SOURCES
     src/media_info.cpp
     src/streaming.cpp
     src/http_server.cpp
+    src/mcp_server.cpp
 )
 
 add_executable(mychannel ${SOURCES})
