Implement MCP JSON-RPC 2.0 endpoint and associated methods for tool management

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,35 +34,7 @@
             }
         },
         {
-            "name": "Debug MyChannel (Nix Environment)",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "/usr/bin/env",
-            "args": [
-                "nix", "develop", "-c", "lldb", "--", "${workspaceFolder}/build/mychannel"
-            ],
-            "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
-            "environment": [
-                {
-                    "name": "YOUTUBE_RTMP_URL",
-                    "value": "${env:YOUTUBE_RTMP_URL}"
-                },
-                {
-                    "name": "YOUTUBE_STREAM_KEY",
-                    "value": "${env:YOUTUBE_STREAM_KEY}"
-                },
-                {
-                    "name": "MYCHANNEL_AUTH_TOKEN",
-                    "value": "${env:MYCHANNEL_AUTH_TOKEN}"
-                }
-            ],
-            "externalConsole": false,
-            "MIMode": "lldb",
-            "preLaunchTask": "CMake: Build"
-        },
-        {
-            "name": "Debug MyChannel (with test env)",
+            "name": "Debug MyChannel (Test Environment)",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/build/mychannel",
@@ -92,32 +64,6 @@
                 "programOutput": true,
                 "trace": false
             }
-        },
-        {
-            "name": "Run MyChannel (No Debug)",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${workspaceFolder}/build/mychannel",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${workspaceFolder}",
-            "environment": [
-                {
-                    "name": "YOUTUBE_RTMP_URL",
-                    "value": "${env:YOUTUBE_RTMP_URL}"
-                },
-                {
-                    "name": "YOUTUBE_STREAM_KEY",
-                    "value": "${env:YOUTUBE_STREAM_KEY}"
-                },
-                {
-                    "name": "MYCHANNEL_AUTH_TOKEN",
-                    "value": "${env:MYCHANNEL_AUTH_TOKEN}"
-                }
-            ],
-            "externalConsole": true,
-            "MIMode": "lldb",
-            "preLaunchTask": "CMake: Build"
         }
     ]
 }
