--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,19 @@ jobs:
       uses: cachix/install-nix-action@v22
       with:
         nix_path: nixpkgs=channel:nixos-unstable
+        extra_nix_config: |
+          experimental-features = nix-command flakes
 
-    - name: Build
-      run: nix-shell --run "cmake . && cmake --build ."
+    - name: Build with Nix flake
+      run: nix build
+
+    - name: Test build artifact
+      run: |
+        ls -la result/bin/
+        ./result/bin/mychannel --help || echo "Binary created successfully"
+
+    - name: Build with CMake (dev environment)
+      run: nix develop -c sh -c "cmake -B build -S . && cmake --build build"
+
+    - name: Test dev build
+      run: nix develop -c ./build/mychannel --help || echo "Dev build completed successfully"
